examples/test/testpolicy10650.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10650
  namespace: namespace245
spec:
  podSelector:
    matchLabels:
      key19: value43
      key10: value11
      key38: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value20
          key48: value28
      podSelector:
        matchLabels:
          key6: value1
          key8: value37
          key27: value36
